# backend-player-segmentasi

./: .gitignore  bun.lockb  dominant_topic_per_game.csv  hasil_fitur_untuk_model.csv  hasil_keanggotaan_arketipe.csv  hasil_profil_pemain.csv  hasil_segmentasi_pengguna.csv  main.py  package.json  players_data.csv  predicted_reviews.csv  pyproject.toml  server.py
hasil_test_1/: dominant_topic_per_game.csv  hasil_fitur_untuk_model.csv  hasil_keanggotaan_arketipe.csv  hasil_profil_pemain.csv  hasil_segmentasi_pengguna.csv  players_data.csv  predicted_reviews.csv  raw_steam_reviews.csv  scraped_steam_data.csv  scraped_steam_reviews.csv
migrations/versions/: 4254adfb5e5b_init.py  a68322daca5c_update.py  c056dc446405_update.py  d6421dbf504f_update.py  de231518a1c7_update.py  fad99da3e53c_update.py
src/config/: config.py  database.py
src/controllers/: TopicModelingController.py
src/middlewares/: AuthMiddleware.py
src/models/: PlayerGameData.py  Scrapping.py  Segmentasi.py  SteamIDProses.py  TopicModeling.py  User.py
src/repositories/: PlayerGameDataRepository.py  ScrappingRepository.py  SegmentasiRepository.py  SteamIDProsesRepository.py  TopicModelingRepository.py  UserRepository.py
src/routes/: main.py
src/server/: main.py
src/services/: AnalysisOrchestratorService.py  AuthService.py  ScrappingService.py  SegmentasiService.py  TestingSegmentasi.py  TopicModelingService.py
src/utils/: job_manager.py  jwt.py  preprocess.py  uploadFIle.py
src/utils/preprocessing/: normalization_dict.json  text_processor.py
src/utils/scraping/: steam_data.py  (+1 more)
(+1 files in other folders)
