[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "bertopic>=0.17.3",
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "kneed>=0.8.5",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "paramiko==2.11.0",
    "psutil>=7.0.0",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "spacy>=3.8.7",
    "sshtunnel>=0.4.0",
]
